tests/errors/header/missing_quote_comment 2.s
.name "zork
.comment "escription


live %1
